Prevent the trophy content being squished together

--- a/wcfsetup/install/files/style/ui/trophy.scss
+++ b/wcfsetup/install/files/style/ui/trophy.scss
@@ -60,6 +60,11 @@
 			> span:last-child {
 				margin-left: 5px;
 			}
+
+			input,
+			.trophyIcon {
+				flex-shrink: 0;
+			}
 		}
 	}
 }
